# nexus-automation-framework

./: .dockerignore  .gitignore  Dockerfile  README.md  README_STRATEGIC.md  docker-compose.yml  pyproject.toml  pytest.err  pytest_out.txt  pytest_out_utf8.txt  requirements.txt
docs/: agentic_pentest_audit.md  agentic_pentest_complete.md  agentic_pentest_complete_fr.md  agentic_pentest_todo.md  architecture.html  index.html  vpn_detection_methodology.md
nexus_framework/: __init__.py  __main__.py  config.py  container_security.py  crypto_utils.py  db_manager.py  enhanced_tools.py  exceptions.py  healthcheck.py  metrics.py  output_normalizer.py  payload_manager.py  server.py  tools.py  validators.py
nexus_framework/agents/: __init__.py  base.py  specialists.py  specialists_phase2.py
nexus_framework/intelligence/: __init__.py  cve_advisor.py
nexus_framework/strategic/: __init__.py  attack_graph.py  brain.py  correlation.py  execution.py  governance.py  knowledge.py  observability.py  opsec.py  orchestration.py  rate_limiter.py  tools.py
scripts/: README.md  analyze_cvelistV5.py  analyze_database.py  docker-entrypoint.sh  enrich_database.py  enrich_patterns.py  import_cve_database.py  import_recent_cves.py  populate_database.py  populate_workflows.py  redesign_schema.py  requirements.txt  run_import.ps1
tests/: __init__.py  test_nexus.py  test_strategic.py
