[project]
name = "nexus-automation-framework"
version = "1.1.0"
description = "Nexus Automation Framework - Enterprise orchestration platform for intelligent system automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nexus Development Team" }]
keywords = ["automation", "orchestration", "framework", "enterprise", "infrastructure", "monitoring", "compliance"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0",
    "httpx>=0.27",
    "mcp[cli]>=0.2.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    # Strategic Brain Engine Dependencies
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Correlation Engine Dependencies
    "xmltodict>=0.13.0",
    # Execution Layer Dependencies
    "psutil>=5.9.0",
    # Governance Dependencies
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    # Observability Dependencies
    "prometheus-client>=0.17.0",
]

[project.scripts]
nexus-framework = "nexus_framework.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_framework"]

[tool.pyright]
include = ["nexus_framework"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.378",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "black>=24.0.0",
]